--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -154,7 +154,7 @@ body {
     background-color: rgba(16, 15, 13, 0.9);
     display: block;
     align-items: center;
-    z-index: 9;
+    z-index: 8;
     width: 100%;
 }
 
@@ -343,11 +343,14 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
 }
 
 .project-inner-content {
-    margin: 35px auto;
     width: 75%;
     padding: 12px 16px;
     background-color: rgba(63.03, 63.03, 63.03, 0.48);
@@ -1489,146 +1492,6 @@ hr {
     }
 }
 
-@media screen and (max-width: 480px) {
-    .theme-select {
-        display: block;
-    }
-
-    .project-main {
-        padding: 50px 0 100px;
-    }
-
-    .project-section {
-        overflow-x: auto;
-        gap: 2rem;
-        width: 100%;
-        padding: 0 18px;
-    }
-
-    .project-listing {
-        width: 100%;
-    }
-
-    .blog-img img {
-        height: 180px;
-        object-fit: cover;
-        border-radius: 6px;
-    }
-
-    .blog-details-img {
-        height: 180px;
-        object-fit: cover;
-        border-radius: 6px;
-    }
-
-    .right-arrow {
-        width: 25px;
-        margin-left: 12px;
-    }
-
-    .btn-white, .btn-yellow {
-        min-width: auto;
-        padding: 0 16px;
-    }
-
-    .slide-content {
-        width: 90%;
-    }
-
-    .slide-content div {
-        width: 100%;
-        margin-bottom: 35px;
-    }
-
-    .carousel-bar {
-        width: 85%;
-    }
-
-    .main-slide {
-        height: 65vh;
-    }
-
-    .header {
-        min-height: 96px;
-        background-color: #252523;
-    }
-
-    .main-logo {
-        height: 80px;
-        width: 170px;
-    }
-
-    .contact-section {
-        padding: 20px;
-        display: block;
-        text-align: center;
-    }
-
-    .contact-1 {
-        width: 100%;
-    }
-
-    .contact-2 {
-        width: 100%;
-        margin-top: 20px;
-        padding: 10px;
-    }
-
-    .contact-3 {
-        width: 100%;
-    }
-
-    .btn-contact {
-        border-radius: 0;
-    }
-
-    .small-card img {
-        width: 100%;
-        min-height: 200px;
-        object-fit: cover;
-    }
-
-    .footer-desc {
-        width: 100%;
-    }
-
-    .footer-bg {
-        text-align: right;
-        position: absolute;
-        left: -85%;
-        bottom: 0;
-    }
-
-    .mt-110 {
-        margin-top: 96px;
-    }
-
-    .footer-bg img {
-        width: 100%;
-        height: 180px;
-        object-fit: cover;
-    }
-
-    .w-75-custom {
-        width: 100%;
-    }
-
-    .about-main {
-        padding: 60px 0;
-    }
-
-    .about-main-img {
-        margin-top: -68%;
-        position: relative;
-        z-index: -1;
-    }
-
-    .btn-theme-about {
-        transform: translateX(14%);
-    }
-
-}
-
 @media screen and (max-width: 992px) {
     .search-section {
         display: none;
@@ -1687,6 +1550,171 @@ hr {
     .contact-3 {
         width: 100%;
     }
+    iframe {
+        height: 290px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .theme-select {
+        display: block;
+    }
+
+    .project-main {
+        padding: 50px 0 100px;
+    }
+
+    .project-section {
+        overflow-x: auto;
+        gap: 2rem;
+        width: 100%;
+        padding: 0 18px;
+    }
+
+    .project-listing {
+        width: 100%;
+    }
+
+    .blog-img img {
+        height: 180px;
+        object-fit: cover;
+        border-radius: 6px;
+    }
+
+    .blog-details-img {
+        height: 180px;
+        object-fit: cover;
+        border-radius: 6px;
+    }
+
+    .right-arrow {
+        width: 25px;
+        margin-left: 12px;
+    }
+
+    .btn-white, .btn-yellow {
+        min-width: auto;
+        padding: 0 16px;
+    }
+
+    .slide-content {
+        width: 90%;
+    }
+
+    .slide-content div {
+        width: 100%;
+        margin-bottom: 35px;
+    }
+
+    .carousel-bar {
+        width: 85%;
+    }
+
+    /*.main-slide {*/
+    /*    height: 65vh;*/
+    /*}*/
+
+    .header {
+        min-height: 96px;
+        background-color: #252523;
+    }
+
+    .main-logo {
+        height: 80px;
+        width: 170px;
+    }
+
+    .contact-section {
+        padding: 20px;
+        display: block;
+        text-align: center;
+    }
+
+    .contact-1 {
+        width: 100%;
+    }
+
+    .contact-2 {
+        width: 100%;
+        margin-top: 20px;
+        padding: 10px;
+    }
+
+    .contact-3 {
+        width: 100%;
+    }
+
+    .btn-contact {
+        border-radius: 0;
+    }
+
+    .small-card img {
+        width: 100%;
+        min-height: 100px;
+        height: 130px;
+        object-fit: cover;
+    }
+
+    .footer-desc {
+        width: 100%;
+    }
+
+    .footer-bg {
+        text-align: right;
+        position: absolute;
+        left: -85%;
+        bottom: 0;
+    }
+
+    .mt-110 {
+        margin-top: 96px;
+    }
+
+    .footer-bg img {
+        width: 100%;
+        height: 180px;
+        object-fit: cover;
+    }
+
+    .w-75-custom {
+        width: 100%;
+    }
+
+    .about-main {
+        padding: 60px 0;
+    }
+
+    .about-main-img {
+        margin-top: -68%;
+        position: relative;
+        z-index: -1;
+    }
+
+    .btn-theme-about {
+        transform: translateX(14%);
+    }
+    .project-inner-content
+    {
+        width: 90%;
+        padding: 8px 10px;
+    }
+    .project-content p
+    {
+        margin-bottom: 0;
+    }
+    .project-bg
+    {
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    .mt-10
+    {
+        margin-top: 5rem;
+    }
+    .slide-content div h3
+    {
+        font-size: 35px;
+    }
 }
 
 @media sceen and (min-width: 320px) {
@@ -1706,14 +1734,6 @@ hr {
     iframe {
         height: 216px;
     }
-}
-
-@media screen and (min-width: 992px) {
-
-    iframe {
-        height: 290px;
-    }
-
 }
 
 @media screen and (min-width: 1200px) {
