--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -209,6 +209,8 @@ body {
 
 .carousel-indicators {
     align-items: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .carousel-indicators button {
@@ -333,6 +335,7 @@ body {
 
 .about-content h1 {
     letter-spacing: 4px;
+    word-break: break-word;
 }
 
 .about-content p {
@@ -850,7 +853,7 @@ body {
     height: 100vh;
     overflow-y: scroll;
     top: 0;
-    z-index: 9;
+    z-index: 10;
 }
 
 .btn-social-icon {
@@ -1490,6 +1493,10 @@ hr {
 }
 
 @media screen and (max-width: 480px) {
+    .contact-icons
+    {
+        margin: 0;
+    }
     .theme-select {
         display: block;
     }
@@ -1625,6 +1632,10 @@ hr {
 
     .btn-theme-about {
         transform: translateX(14%);
+    }
+    .about-content
+    {
+        width: 100%;
     }
 
 }
